[tool.poetry]
name = "bald-eagles"
version = "1.0.0"
description = "The backend for Bald Eagle conversions."
authors = [
    "vcokltfre <vcokltfre@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
Jinja2 = "^3.0.1"
taskipy = "^1.8.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
start-dev = "uvicorn src.main:app --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
